--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
                         </div> -->
         </div>
         </div>
-
+<!-- 
 
         <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
 
@@ -626,12 +626,12 @@
                             </div>  -->
 
 
-                    <button type="submit"> Enviar</button>
+               <!--     <button type="submit"> Enviar</button>
 
 
                 </form>
             </div>
-        </div>
+        </div>   -->
 
         <br> <br> 
         </div>
