--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
                 Escríbeme por WhatsApp <i class="fab fa-whatsapp" style="margin-left: 8px;"></i>
             </a>
         </div>
+        <br> <br> 
     </section>
 
 
@@ -558,7 +559,7 @@
 
 
 
-    <!-- CONTACT  -->
+    <!-- CONTACT  --
     <section class="section-paddin5 bg-light" id="contact">
         <div class="container">
             <!-- <div class="row">
@@ -570,7 +571,7 @@
                            <div class="line bg-white"></div>
                             <p class="text-white">We love to craft digital experiances for brands rather than crap and more
                                 lorem ipsums and do crazy skills</p>
-                        </div> -->
+                        </div> --
         </div>
         </div>
 <!-- 
@@ -631,7 +632,7 @@
 
                 </form>
             </div>
-        </div>   -->
+        </div>  
 
         <br> <br> 
         </div>
@@ -647,7 +648,7 @@
         <br> <br> 
 
 
-    </section>
+    </section>  -->
 
 
 
