--- a/index.html
+++ b/index.html
@@ -721,8 +721,32 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
 
+ 
+      
+ <form action="https://formsubmit.co/tu-email@gmail.com" method="POST">
+    <input type="text" name="name" placeholder="Tu Nombre" required>
+    <input type="email" name="email" placeholder="Tu Correo" required>
+    <textarea name="message" placeholder="Tu Mensaje" required></textarea>
+    <button type="submit">Enviar</button>
+</form>
 
-    
+
+ 
+
+
+
+
+
+
+
+
+
+
+ 
+
+
+
+    <!-- 
     <section>
 
 
