--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
  
       
- <form action="https://formsubmit.co/tu-email@gmail.com" method="POST">
+ <form action="https://formsubmit.co/dvizueta02@gmail.com " method="POST">
     <input type="text" name="name" placeholder="Tu Nombre" required>
     <input type="email" name="email" placeholder="Tu Correo" required>
     <textarea name="message" placeholder="Tu Mensaje" required></textarea>
