--- a/index.html
+++ b/index.html
@@ -721,14 +721,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
 
+
+ <section> 
+
+
  
-      
- <form action="https://formsubmit.co/dvizueta02@gmail.com " method="POST">
-    <input type="text" name="name" placeholder="Tu Nombre" required>
-    <input type="email" name="email" placeholder="Tu Correo" required>
-    <textarea name="message" placeholder="Tu Mensaje" required></textarea>
-    <button type="submit">Enviar</button>
-</form>
+     <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
+        <div class="col-lg-8">
+        <div class="container">
+          <h2 class="text" text-align-center >Contáctanos</h2>
+        
+   <form action="https://formsubmit.co/dvizueta02@gmail.com " method="POST">
+      <input type="text" name="name" placeholder="Tu Nombre" required>
+      <input type="email" name="email" placeholder="Tu Correo" required>
+       <input type="numb" name="numb" placeholder="Tu número de contacto" required>
+      <textarea name="message" placeholder="Tu Mensaje" required></textarea>
+      <button type="submit">Enviar</button>
+  </form>
+
+ </section>
+
 
 
  
