--- a/index.html
+++ b/index.html
@@ -712,6 +712,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
    <section  > 
+
+    <div class="row justify-content-center" data-aos="fade-down" data-aos-delay="250">
+
+       <div class="col-lg-8">
+                <br> <br>
         
 
         <div class="container">
