--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                   <div class="col-lg-6">
                     <div class="timeline-image">
-                        <img class="rounded-circle img-fluid" src="img/DiegoVizueta.png" alt="Diego Vizueta Diseñador UXUI" width="150" height="150" />
+                        <img class="rounded-circle img-fluid" src="assets/DiegoVizueta.png" alt="Diego Vizueta Diseñador UXUI" width="150" height="150" />
                     </div>
                     <br>
                    
