--- a/index.html
+++ b/index.html
@@ -584,6 +584,7 @@
 
 
                     <div class="text-center">
+                        <input type="hidden" name="_captcha" value="false">        <!-- oculta el recapchat-->
                         <button type="submit"  class="custom-btn">Enviar Mensaje</button>
                     </div>
                     
