--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     <div class="text-center">
                         <input type="hidden" name="_captcha" value="false">        <!-- oculta el recapchat-->
                          <!-- Redirección después de enviar el formulario -->
-                        <input type="hidden" name="_next" value="https://tusitio.com/gracias">
+                        <input type="hidden" name="_next" value=" https://diego-vizueta.github.io/page_contacts/ ">
                         <button type="submit"  class="custom-btn">Enviar Mensaje</button>
                     </div>
                     
