--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"> ¿Quién es Diego Vizueta? </h2> 
-                    <h3 class="section-subheading text-muted"> Soy especialista en Diseño UX/UI, Marketing Digital y Comunicación Estratégica, con experiencia en crear flujos digitales centradas en el usuario. </h3>
+                    <h3 class="section-subheading text-muted"> Soy especialista en Diseño UX/UI, Marketing Digital y Comunicación Estratégica, con sólidos conocimientos en crear experiencia digitales centradas en el usuario. </h3>
                 
                 </div>
             
