--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
              <div class=" container text-center">
                  
-                <img class="img-fluid mx-auto d-block" src="assets/qr_Contact_dv.JPG" alt=" Añadir Contacto por Qr Diego Vizueta  " />  <br>
+                <img class="img-fluid mx-auto d-block" src="assets/qrcode_diegov_vale.png" alt=" Añadir Contacto por Qr Diego Vizueta  " />  <br>
                 <h5 style="color: aliceblue;"> "¡Escanea el QR y agrégame a tus contactos!" </h5>
                
             </div>
