--- a/index.html
+++ b/index.html
@@ -501,7 +501,8 @@
 
              <div class=" container text-center">
                  
-                <img class="img-fluid mx-auto d-block" src="assets/qrcode_diegov_vale.png" alt=" Añadir Contacto por Qr Diego Vizueta  " />  <br>
+                <img class="img-fluid mx-auto d-block" src="assets/qrcode_diegov_vale.png" alt="Añadir Contacto por Qr Diego Vizueta" style="width: auto; height: 150px;" />
+                 <br>
                 <h5 style="color: aliceblue;"> "¡Escanea el QR y agrégame a tus contactos!" </h5>
                
             </div>
