--- a/index.html
+++ b/index.html
@@ -386,6 +386,16 @@
                        <a href=" https://www.linkedin.com/in/diego-fernando-vizueta-d%C3%ADaz-408497168/recent-activity/articles/ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
 
+                     <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x custom-circle "></i>
+                            <i class="fa-solid fa-newspaper  fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3"> Portafolio_Digital </h4>
+                       <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
+                       <a href=" https://www.behance.net/diegovizueta " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                    </div>
+
 
                  <!--    <div class="col-md-3">
                         <span class="fa-stack fa-4x">
