--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i>
                             <i class="fa-solid fa-newspaper  fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"> Portafolio_Digital </h4>
+                        <h4 class="my-3"> PortafolioDig </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
                        <a href=" https://www.behance.net/diegovizueta " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
