--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" /> 
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>DiegoVizueta </title>
@@ -83,7 +83,15 @@
             target="_blank">
             Contáctame por WhatsApp 
             <i class="fab fa-whatsapp"></i>
+            </a> 
+                <br> 
+                  <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " 
+            class="btn btn-xl ms-lg-3 text-uppercase custom-whatsapp-btn" 
+            target="_blank">
+            Agenda una Cita
+            <i class="fa-light fa-calendar-days"></i> 
             </a>
+                
         
             </div>
         </header>
