--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             class="btn btn-xl ms-lg-3 text-uppercase custom-whatsapp-btn" 
             target="_blank">
             Agenda una Cita
-            <i class="fa-light fa-calendar-days"></i> 
+            <i class="fab fa-calendar-days"></i> 
             </a>
                 
         
