--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i>
-                              <i class="fa-regular fa-calendar-days"></i>
+                              <i class="fa-regular fa-calendar-days fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3"> Agenda una cita </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
