--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " 
             class="btn btn-xl ms-lg-3 text-uppercase custom-whatsapp-btn" 
             target="_blank">
-            Agenda una Cita
+            Agenda tu cita en Google Calendar
             <i class="fa-regular fa-calendar-days"></i>
             </a>
                 
@@ -411,7 +411,7 @@
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i>
                               <i class="fa-regular fa-calendar-days fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"> Agenda una cita </h4>
+                        <h4 class="my-3"> Agenda tu cita </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
                        <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " class="btn btn-dark btn-lg " target="_blank" > Reserva cita </a>
                     </div>
@@ -540,7 +540,7 @@
             <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " 
             class="btn btn-xl ms-lg-3 text-uppercase custom-whatsapp-btn" 
             target="_blank">
-            Agenda una Cita
+            Agenda tu cita en Google Calendar
             <i class="fa-regular fa-calendar-days"></i>
             </a>
             
