--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         </span>
                         <h4 class="my-3"> Agenda tu cita </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
-                       <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " class="btn btn-dark btn-lg " target="_blank" > Reserva cita </a>
+                       <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " class="btn btn-dark btn-lg " target="_blank" > Ir Google Calendar </a>
                     </div>
 
 
