--- a/index.html
+++ b/index.html
@@ -416,6 +416,16 @@
                        <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " class="btn btn-dark btn-lg " target="_blank" > Ir Google Calendar </a>
                     </div>
 
+                     <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x custom-circle "></i> 
+                            <i class="fa-regular fa-address-book  fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3"> Descargar CV </h4>
+                       <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
+                       <a href=" # " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                    </div>
+
 
                  <!--    <div class="col-md-3">
                         <span class="fa-stack fa-4x">
