--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                      <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i> 
-                            <i class="fa-regular fa-address-book  fa-stack-1x fa-inverse"></i>
+                            <i class=" fa-solid fa-user-tie  fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3"> Descargar CV </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
