--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i>
                             <i class="fa-brands fa-blogger-b fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"> Blogger </h4>
+                        <h4 class="my-3"> Blog </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
                        <a href=" https://uxui-for-world.blogspot.com/ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
