--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i>
                             <i class="fa-solid fa-newspaper  fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"> Artículos </h4>
+                        <h4 class="my-3"> Artículos In </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
                        <a href=" https://www.linkedin.com/in/diego-fernando-vizueta-d%C3%ADaz-408497168/recent-activity/articles/ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
@@ -401,7 +401,7 @@
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i> 
                             <i class="fa-regular fa-address-book  fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"> PortafolioDig </h4>
+                        <h4 class="my-3"> Portafolio Digital </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
                        <a href=" https://www.behance.net/diegovizueta " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
