--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                         </span>
                         <h4 class="my-3"> Descargar CV </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
-                       <a href=" # " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                       <a href="  " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
 
 
