--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <header class="masthead">
             <div class="container">
               <!--   <div class="masthead-subheading"> No empecé como experto en UX, pero mi misión siempre fue mejorar la experiencia del usuario. "</div> -->
-                <h3 class="masthead-subheading"> Aprender-Crear-Medir. Creo experiencias que conectan: <br> fusionando metodologías, diseño, marketing y desarrollo web como herramientas clave. </h3>
+                <h3 class="masthead-subheading"> <strong>Aprender-Crear-Medir.</strong> Creo experiencias que conectan: <br> fusionando metodologías, diseño, marketing y desarrollo web como herramientas clave. </h3>
 
              <!--    <div class="masthead-subheading"> BIENVENIDOS a mi TEAM.</div>  -->
 
                 <div class="masthead-heading text-uppercase"> User Xperience, UX, UI, CX </div>
-                 <h3 class="masthead-subheading"> Mis proyectos se encuentra en siete países </h3>
+            <!--      <h3 class="masthead-subheading"> Mis proyectos se encuentra en siete países </h3> -->
 
             <br>  
 
