--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <header class="masthead">
             <div class="container">
               <!--   <div class="masthead-subheading"> No empecé como experto en UX, pero mi misión siempre fue mejorar la experiencia del usuario. "</div> -->
-                <h3 class="masthead-subheading"> <strong>Aprender-Crear-Medir.</strong> Creo experiencias que conectan con usuarios <br> fusionando, diseño, marketing y desarrollo web como herramientas clave. </h3>
+                <h3 class="masthead-subheading"> <strong>Crear-Medir-Aprender.</strong> Creo experiencias que conectan con usuarios <br> fusionando, diseño, marketing y desarrollo web como herramientas clave. </h3>
 
              <!--    <div class="masthead-subheading"> BIENVENIDOS a mi TEAM.</div>  -->
 
