--- a/index.html
+++ b/index.html
@@ -17,13 +17,25 @@
         <link href="css/styles.css" rel="stylesheet" />
 
 
-         <!-- Google Tag Manager -->
+         <!-- Google Tag Manager ABRIL -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-NKH6FLCL');</script>
         <!-- End Google Tag Manager -->
+
+
+        <!-- Google Tag Manager JULIO 15 2025-->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-K9PLTGG6');</script>
+<!-- End Google Tag Manager -->
+
+
+        
 
     </head>
 
@@ -36,6 +48,12 @@
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKH6FLCL"
          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          <!-- End Google Tag Manager (noscript) -->
+
+
+        <!-- Google Tag Manager (noscript)  JULIO 15 2025 -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9PLTGG6"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 
         <!-- Navigation-->
