--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <div class="d-flex h-100 align-items-center justify-content-center">
                                         <div class="text-center text-warning1" >
                                             <h1>Educación</h1>
-                                            <h3>Mgtr. en Comunicación Estratégica.</h3>
+                                            <h3>Magíster en Comunicación Estratégica.</h3>
                                             <p> Universidad Andina Simón Bolívar.</p>
                                             <p> Cuarto Nivel </p>
                                         </div>
@@ -250,6 +250,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <h1>Certificaciones</h1>
                                             <h3> - Especialista UX UI IXD.</h3>
                                             <p> UCAM México </p>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                      <!-- cuatro Slider -->
+                                <div class="carousel-item"
+                                style="background: linear-gradient( 120deg, #212529, #212529, #212529 ); height: 400px;">
+                                    <div class="d-flex h-100 align-items-center justify-content-center">
+                                        <div class="text-center text-white">
+
+                                            <h1>Certificaciones</h1>
+                                            <h3> - Esp. CX Research y UX Testing.</h3>
+                                            <p> PLATZI, Colombia </p>
                                         </div>
                                     </div>
                                 </div>
