--- a/index.html
+++ b/index.html
@@ -599,7 +599,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container "  id="form_uno " >
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contactate con nosotros </h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                 <!--   <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>  -->
+                    <h3 class="section-heading text-uppercase"> info@diegovizueta.com </h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
        
