--- a/index.html
+++ b/index.html
@@ -600,8 +600,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contactate con nosotros </h2>
                  <!--   <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>  -->
-                    <h3 class="section-heading text-uppercase"> info@diegovizueta.com </h3>
+                     <h5 style="color: aliceblue;"> "¡Escanea el QR y agrégame a tus contactos!" </h5>
                 </div>
+                <br>
                 <!-- * * * * * * * * * * * * * * *-->
        
             
