--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contactate con nosotros </h2>
                  <!--   <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>  -->
-                     <h5 style="color: aliceblue;"> "¡Escanea el QR y agrégame a tus contactos!" </h5>
+                     <h5 style="color: aliceblue;"> <strong> Email: </strong> info@diegovizueta.com </h5>
                 </div>
                 <br>
                 <!-- * * * * * * * * * * * * * * *-->
