--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <header class="masthead">
             <div class="container">
               <!--   <div class="masthead-subheading"> No empecé como experto en UX, pero mi misión siempre fue mejorar la experiencia del usuario. "</div> -->
-                <h3 class="masthead-subheading"> <strong>Crear-Medir-Aprender.</strong>  <br> Creo experiencias que conectan con usuarios <br> fusionando, diseño, marketing y desarrollo web como herramientas clave. </h3>
+                <h3 class="masthead-subheading"> <strong>Crear-Medir-Aprender.</strong>  <br> <br> Creo experiencias que conectan con usuarios <br> fusionando, diseño, marketing y desarrollo web como herramientas clave. </h3>
 
              <!--    <div class="masthead-subheading"> BIENVENIDOS a mi TEAM.</div>  -->
 
