Update link in index.html to new URL

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </span>
                         <h4 class="my-3"> Sitio Web </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
-                       <a href=" https://www.cebrand-studio.com/web_cebrand_may2025/index.html " class="btn btn-dark btn-lg" target="_blank"  > Conocer más</a>
+                       <a href=" https://diego-vizueta.github.io/cebrand/ " class="btn btn-dark btn-lg" target="_blank"  > Conocer más</a>
                     </div>
 
 
