--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h4 class="my-3"> Linkendin </h4>
                        <!--  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
 
-                        <a href=" https://www.linkedin.com/in/diego-fernando-vizueta-d%C3%ADaz-408497168/ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                        <a href="https://www.linkedin.com/in/diego-vizueta/ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
 
 
