--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h4 class="my-3"> Linkendin </h4>
                        <!--  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
 
-                        <a href="https://www.linkedin.com/in/diego-vizueta/ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                        <a href=" https://ec.linkedin.com/in/diego-vizueta " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
 
 
@@ -426,7 +426,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </span>
                         <h4 class="my-3"> Artículos In </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
-                       <a href=" https://www.linkedin.com/in/diego-fernando-vizueta-d%C3%ADaz-408497168/recent-activity/articles/ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                       <a href=" https://es.linkedin.com/posts/diego-fernando-vizueta-d%C3%ADaz-408497168_design-uxui-diegovizueta-activity-7228855821470699521-oxx_ " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
 
                      <div class="col-md-3">
@@ -458,6 +458,61 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
                        <a href="  " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
+
+
+
+
+                      <div class="row mt-5 justify-content-center text-center" style=" gap: 20px 0px;" >
+
+
+
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x custom-circle "></i>
+                            <i class="fa-solid fa-newspaper  fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3"> Presentación Dig </h4>
+                       <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
+                       <a href=" https://www.figma.com/proto/dQ0f68rP0d9QDDYYuuIiTb/PRESENTACI%C3%93N_COONECTA?page-id=0%3A1&node-id=21-144&viewport=14978%2C-3887%2C0.33&t=4mxIght6LDQrAMlf-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=21%3A144 " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                    </div>
+
+                          <!-- 
+
+                     <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x custom-circle "></i> 
+                            <i class="fa-regular fa-address-book  fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3"> Portafolio Digital </h4>
+                       <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  --
+                       <a href=" https://www.behance.net/diegovizueta " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                    </div>
+
+                    <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x custom-circle "></i>
+                              <i class="fa-regular fa-calendar-days fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3"> Agenda tu cita </h4>
+                       <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  --
+                       <a href=" https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0v_iM6i7f2oiNCxv99HNZbJuj4qod8-z8i4s6amO1FUp7vqPy53CKvT8FAK0GgeuQtQvuiUiUy " class="btn btn-dark btn-lg " target="_blank" > Ir Google Calendar </a>
+                    </div>
+
+                     <div class="col-md-3">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x custom-circle "></i> 
+                            <i class=" fa-solid fa-user-tie  fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3"> Descargar CV </h4>
+                       <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  --
+                       <a href="  " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
+                    </div>
+
+
+
+
+
+                    
 
 
                  <!--    <div class="col-md-3">
