--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i>
-                              <i class="fa-regular fa-line-chart fa-stack-1x fa-inverse"></i>
+                            <i class="fa-regular fa-line-chart fa-stack-1x fa-inverse"></i>
+                            <i class="fa fa-line-chart" aria-hidden="true"></i>
                         </span>
                         <h4 class="my-3"> Presentación Dig </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
