--- a/index.html
+++ b/index.html
@@ -451,9 +451,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <i class="fas fa-circle fa-stack-2x custom-circle "></i> 
                             <i class="fa-regular fa-address-book  fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"> Presentación Dig </h4>
+                        <h4 class="my-3"> Presentación DV </h4>
                        <!-- <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>  -->
-                       <a href=" https://www.figma.com/proto/dQ0f68rP0d9QDDYYuuIiTb/PRESENTACI%C3%93N_COONECTA?page-id=0%3A1&node-id=55-336&viewport=11705%2C-2952%2C0.26&t=Nj4EymsiLUhxJq3V-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=55%3A336 " class="btn btn-dark btn-lg" target="_blank" > Presentación Dig </a>
+                       <a href=" https://www.figma.com/proto/dQ0f68rP0d9QDDYYuuIiTb/PRESENTACI%C3%93N_COONECTA?page-id=0%3A1&node-id=55-336&viewport=11705%2C-2952%2C0.26&t=Nj4EymsiLUhxJq3V-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=55%3A336 " class="btn btn-dark btn-lg" target="_blank" > Conocer más </a>
                     </div>
 
                     <div class="col-md-3">
