Update masthead subheading in index.html

--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
+				
               <!--   <div class="masthead-subheading"> No empecé como experto en UX, pero mi misión siempre fue mejorar la experiencia del usuario. "</div> -->
-                <h3 class="masthead-subheading"> <strong style="white-space: nowrap;" spellcheck="false">Crear-Medir-Aprender.</strong>
+                <h3 class="masthead-subheading"> 
+					<strong style="white-space: nowrap;"> Crear-&nbsp;Medir-&nbsp;Aprender.  </strong>
+					
 				 <br> <br> Creo experiencias que conectan con usuarios <br> fusionando, diseño, marketing y desarrollo web como herramientas clave. </h3>
 
              <!--    <div class="masthead-subheading"> BIENVENIDOS a mi TEAM.</div>  -->
