Update redirect URL after form submission

--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             document.getElementById("successMessage").style.display = "block"; // Muestra el mensaje
                             form.reset(); // Limpia el formulario
                             setTimeout(() => {
-                                window.location.href = "https://diego-vizueta.github.io/page_contacts/";   // redirige a este enlace 
+                                window.location.href = "https://diegovizueta.com/";   // redirige a este enlace 
                             }, 3000); // Redirige después de 3 segundos (opcional)
                         } else {
                             alert("Hubo un error, intenta nuevamente.");
