--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href=" https://www.hiberus.com/ " class="text-decoration-none fw-bold" style="color:#ffc800;" target="_blank"></a>
             <p>  
                 Director del equipo de Diseño UX/UI en Ecuador, articulando diseño y desarrollo, y validando junto a Hiberus, España, 
-                soluciones alineadas a los objetivos institucionales. (2025)
+                soluciones alineadas a los objetivos institucionales.
                 <br>
 
                  <a href=" https://www.hiberus.com/ " target="_blank" style="color:#ffc800; font-weight:bold; text-decoration:none;">
