Update footer with new styling and contact options

--- a/index.html
+++ b/index.html
@@ -1320,33 +1320,36 @@ document.getElementById("contactForm").addEventListener("submit", function(event
 
 
         <!-- Footer-->
-        <footer class="footer py-4">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; UXUI-DiegoVizueta 2025</div>
-                    
-                    <div class="col-lg-4 my-3 my-lg-0">
+        <!-- Footer-->
+<footer class="footer py-4 footer-green footer-border-top">
+    <div class="container">
+        <div class="row align-items-center">
 
-                        <a href="https://api.whatsapp.com/send?phone=5930984649924&amp;text=Bienvenidos%20a%20Diego_Vizueta_UXUI%20¿Cómo%20te%20podemos%20ayudar?" 
-                        class="btn btn-xl text-uppercase  ms-lg-3 custom-whatsapp-btn" 
-                        target="_blank">
-                        WhatsApp 
-                        <i class="fab fa-whatsapp"></i>
-                        </a>
-                      <!--   <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>  
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
-                    </div>
-                    
-                    <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                         <a href=" https://tikee.tech/ " target="_blank" style="color:#f3f5f6; font-weight:bold; text-decoration:none;">  .  </a>  <!-- enlace para seo tech -->
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-                    </div>
-
-                </div>
+            <!-- Copyright -->
+            <div class="col-lg-4 text-lg-start text-white">
+                Copyright &copy; UX/UI DiegoVizueta 2026
             </div>
-        </footer>
+
+            <!-- WhatsApp -->
+            <div class="col-lg-4 my-3 my-lg-0">
+                <a href="https://api.whatsapp.com/send?phone=5930984649924&text=Bienvenidos%20a%20Diego_Vizueta_UXUI%20¿Cómo%20te%20podemos%20ayudar?"
+                   class="btn btn-xl text-uppercase ms-lg-3 custom-whatsapp-btn"
+                   target="_blank">
+                    Contáctanos por WhatsApp <i class="fab fa-whatsapp"></i>
+                </a>
+            </div>
+
+            <!-- Links -->
+            <div class="col-lg-4 text-lg-end">
+                <a class="text-white text-decoration-none me-3" href="#!">Privacy Policy</a>
+                <a href="https://tikee.tech/" target="_blank" class="text-white fw-bold text-decoration-none">.&nbsp;&nbsp;&nbsp;</a>
+                <a class="text-white text-decoration-none" href="#!">Terms of Use</a>
+            </div>
+
+        </div>
+    </div>
+</footer>
+
         <!-- Portfolio Modals-->
 
 
